--- a/Project.toml
+++ b/Project.toml
@@ -2,5 +2,11 @@ name = "DLkitty"
 uuid = "d5dc50c5-ec9f-588f-8bbc-2f86cb530d38"
 version = "0.1.0"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
 [compat]
 julia = "1.10"
