--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,5 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+DataFrames = "1"
 julia = "1.10"
