--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
@@ -20,13 +21,15 @@ CSV = "0.10.15"
 DataDeps = "0.7.13"
 DataFrames = "1.7.0"
 Distributions = "0.25.113"
+JSONTables = "1.0.3"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
 Plots = "1.40.8"
 julia = "1.10"
 
 [extras]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Random", "Test"]
