--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ DataFrames = "1.7.0"
 Distributions = "0.25.113"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
+Optimisers = "0.4"
 Plots = "1.40.8"
 julia = "1.10"
 
