--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ Distributions = "0.25.113"
 JSONTables = "1.0.3"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
+Optimisers = "0.4"
 Plots = "1.40.8"
 julia = "1.10"
 
