--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
+OneHotArrays = "0b1bfda6-eb8a-41d2-88d8-f5af5cad476f"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -24,7 +25,9 @@ Distributions = "0.25.113"
 JSONTables = "1.0.3"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
+OneHotArrays = "0.2.6"
 Plots = "1.40.8"
+Statistics = "1.11.1"
 julia = "1.10"
 
 [extras]
