--- a/Project.toml
+++ b/Project.toml
@@ -4,29 +4,41 @@ version = "0.1.0"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+GNNGraphs = "aed8fd31-079b-4b5a-b342-a13352159b8c"
+GNNLux = "e8545f4d-a905-48ac-a8c4-ca114b98986d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 OneHotArrays = "0b1bfda6-eb8a-41d2-88d8-f5af5cad476f"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 CSV = "0.10.15"
+CondaPkg = "0.2.24"
 DataDeps = "0.7.13"
 DataFrames = "1.7.0"
 Distributions = "0.25.113"
+GNNGraphs = "1.4.1"
+GNNLux = "0.1.1"
+Graphs = "1.12.0"
 JSONTables = "1.0.3"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
 OneHotArrays = "0.2.6"
 Plots = "1.40.8"
+PythonCall = "0.9.23"
+Tables = "1.12.0"
 Statistics = "1.11.1"
 julia = "1.10"
 
