--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 GNNGraphs = "aed8fd31-079b-4b5a-b342-a13352159b8c"
 GNNLux = "e8545f4d-a905-48ac-a8c4-ca114b98986d"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -32,6 +33,7 @@ CondaPkg = "0.2.24"
 DataDeps = "0.7.13"
 DataFrames = "1.7.0"
 Distributions = "0.25.113"
+Functors = "0.5.2"
 GNNGraphs = "1.4.1"
 GNNLux = "0.1.1"
 Graphs = "1.12.0"
