CompatHelper: add new compat entry for Optimisers at version 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ JSONTables = "1.0.3"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
 OneHotArrays = "0.2.6"
+Optimisers = "0.4"
 Plots = "1.40.8"
 Printf = "1.11.0"
 PythonCall = "0.9.23"
