--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ GNNGraphs = "aed8fd31-079b-4b5a-b342-a13352159b8c"
 GNNLux = "e8545f4d-a905-48ac-a8c4-ca114b98986d"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 OneHotArrays = "0b1bfda6-eb8a-41d2-88d8-f5af5cad476f"
@@ -34,10 +35,11 @@ DataDeps = "0.7.13"
 DataFrames = "1.7.0"
 Distributions = "0.25.113"
 Functors = "0.5.2"
-GNNGraphs = "1.4.1"
+GNNGraphs = "1.4.2"
 GNNLux = "0.1.1"
 Graphs = "1.12.0"
 JSONTables = "1.0.3"
+LinearAlgebra = "1.11.0"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
 OneHotArrays = "0.2.6"
