--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ OneHotArrays = "0b1bfda6-eb8a-41d2-88d8-f5af5cad476f"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -45,6 +46,7 @@ LuxCore = "1.1.0"
 OneHotArrays = "0.2.6"
 Plots = "1.40.8"
 Printf = "1.11.0"
+ProgressMeter = "1.10.2"
 PythonCall = "0.9.23"
 Statistics = "1.11.1"
 Tables = "1.12.0"
