Fix it to not NaN out during training

--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ LinearAlgebra = "1.11.0"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
 OneHotArrays = "0.2.6"
+Optimisers = "0.4.4"
 Plots = "1.40.8"
 Printf = "1.11.0"
 ProgressMeter = "1.10.2"
