--- a/Project.toml
+++ b/Project.toml
@@ -15,10 +15,12 @@ GNNLux = "e8545f4d-a905-48ac-a8c4-ca114b98986d"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JSONTables = "b9914132-a727-11e9-1322-f18e41205b0b"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 OneHotArrays = "0b1bfda6-eb8a-41d2-88d8-f5af5cad476f"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
+ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
@@ -27,6 +29,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TensorBoardLogger = "899adc3e-224a-11e9-021f-63837185c80f"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
@@ -42,10 +45,12 @@ GNNLux = "0.1.1"
 Graphs = "1.12.0"
 JSONTables = "1.0.3"
 LinearAlgebra = "1.11.0"
+Logging = "1.11.0"
 Lux = "1.2.1"
 LuxCore = "1.1.0"
 OneHotArrays = "0.2.6"
 Optimisers = "0.4.4"
+ParameterHandling = "0.5.0"
 Plots = "1.40.8"
 Printf = "1.11.0"
 ProgressMeter = "1.10.2"
@@ -53,6 +58,7 @@ PythonCall = "0.9.23"
 Serialization = "1.11.0"
 Statistics = "1.11.1"
 Tables = "1.12.0"
+TensorBoardLogger = "0.1.25"
 Zygote = "0.6.75"
 julia = "1.10"
 
