--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ Serialization = "1.11.0"
 Statistics = "1.11.1"
 Tables = "1.12.0"
 TensorBoardLogger = "0.1.25"
-Zygote = "0.6.75"
+Zygote = "0.6.75, 0.7"
 julia = "1.10"
 
 [extras]
